--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="background-container--img1">
         <div class="heading-container">
-        <span class="heading-container__heading--big">Es ist Zeit für die Natur zu kämpfen...</span>
-        <p>
-            "Die Augen der wissenschaftlichen Welt richten sich auf die reiche Natur der Türkei, die bedroht ist"
-        </p>
+        <span class="heading-container__heading--big">Es ist Zeit für die Natur zu kämpfen...</span> <br><br><br>
+
+        <span class="heading-container__heading--text"> "Die Augen der wissenschaftlichen Welt richten sich auf die reiche Natur der Türkei, die bedroht ist"</span>
+      
     
     </div>
     </div>
